<resources>
    <string name="app_name">JobManagementAndroid</string>
    <string name="txt_no_jobs">No hay tareas pendientes</string>
    <string name="txt_priority">Prioridad</string>
    <string name="txt_menu_priority">Ordenar por prioridad</string>
    <string name="txt_menu_finished">Mostrar finalizados</string>
    <string name="txt_menu_priority1">Prioridad 1</string>
    <string name="txt_menu_priority2">Prioridad 2</string>
    <string name="txt_menu_priority3">Prioridad 3</string>
    <string name="txt_menu_priority4">Prioridad 4</string>
    <string name="txt_menu_logout">Logout</string>
    <string name="txt_menu_priorityAll">Todas</string>
    <string name="txt_noConnection">No hay conexión a internet</string>
    <string name="txt_horas_empleadas">Horas empleadas</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_user_id">Id de usuario</string>
    <string name="warning_username">El campo no puede estar vacío</string>
</resources>